tests/script_errors/pp_nest_cyclic/error.txt
Error: 
    1 | use foo::baz;
      | ^^^^^^^^^^^^  Cyclic dependency detected: tests/script_errors/pp_nest_cyclic/foo/bar.tremor -> tests/script_errors/pp_nest_cyclic/foo/baz.tremor